<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#98fb98"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvTotalPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/tv_count_label"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/tvTicket"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="#98fb98"
        android:textColor="#696969"
        android:textSize="40sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/btCount01"
            android:text="@string/bt_count01"
            android:onClick="onCountClick"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="0.25"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btCount02"
            android:text="@string/bt_count02"
            android:onClick="onCountClick"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="0.25"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btCount03"
            android:text="@string/bt_count03"
            android:onClick="onCountClick"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="0.25"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btCount04"
            android:text="@string/bt_count04"
            android:onClick="onCountClick"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="0.25"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>