<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#98fb98"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#98fb98"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#808080"
                android:gravity="center_vertical"
                android:text="@string/tv_in_price2"
                android:textColor="#98fb98"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvInputPrice"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#ffffff"
                android:gravity="right|center_vertical"
                android:textColor="#000000"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#808080"
                android:gravity="center_vertical"
                android:text="@string/tv_total_price"
                android:textColor="#98fb98"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTotalPrice"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#ffffff"
                android:gravity="right|center_vertical"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:onClick="onFinishButton"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="#808080"
                android:textColor="#98fb98"
                android:text="@string/bt_finish"
                android:textSize="20sp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>